# monet-plots

./: .gitignore  .pre-commit-config.yaml  .spellcheck.yaml  .spelling_wordlist.txt  404.html  =9.0  README.md  example_facet_grid_spatial.py  example_facet_grid_spatial_simplified.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_upper_air.py  sitemap.xml  temp_plot_generator.py  temp_spread_skill_plot.py  test_temp.py  test_xarray_integration.py
api/: index.html
configuration/: index.html
docs/: getting-started.md
examples/: README.md  facet_grid_plot_example.ipynb  grib_data_example.ipynb  index.html  kde_plot_example.ipynb  plot_categorical.py  plot_diurnal_error.py  plot_ensemble.py  plot_facet_grid.py  plot_facet_grid_spatial.py  plot_kde.py  plot_meteogram.py  plot_performance_diagram.py  plot_polar.py  plot_profile.py  plot_rank_histogram.py  plot_regional_distribution.py  plot_reliability_diagram.py  plot_ridgeline.py  plot_roc_curve.py  plot_scatter.py  plot_scorecard.py  plot_sp_scatter_bias.py  plot_spatial.py  plot_spatial_contour.py  plot_timeseries.py  plot_timeseries_stats.py  plot_trajectory.py  plot_wind_barbs.py  plot_wind_quiver.py  plot_windrose.py  roms_ocean_example.ipynb  scatter_plot_example.ipynb  spatial_bias_scatter_plot_example.ipynb  spatial_contour_plot_example.ipynb  taylor_diagram_plot_example.ipynb  wind_plots_example.ipynb  xarray_weather_example.ipynb
gallery/: index.html  plot_basic_plotting.ipynb  plot_basic_plotting.py  plot_basic_plotting.py.md5  plot_basic_plotting_codeobj.pickle  plot_brier_decomposition.ipynb  plot_brier_decomposition.py  plot_brier_decomposition.py.md5  (+123 more)
(+297 files in other folders)
