[project]
name = "monet-plots"
version = "0.1.0"
description = "MONET Plots"
authors = [{ name = "Jules", email = "jules@example.com" }]
dependencies = [
    "matplotlib",
    "seaborn",
    "numpy",
    "cartopy",
    "pillow",
    "scipy",
    "xarray",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
]

[tool.setuptools]
packages = ["monet_plots"]
