[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monet_plots"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "seaborn",
    "pandas",
    "cartopy",
    "xarray",
    "scipy",
    "numpy",
    "statsmodels",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.4",
    "mkdocs-material>=8.5",
    "mkdocstrings[python]>=0.19",
    "pymdown-extensions>=9.0",
]

[tool.ruff]
exclude = ["examples", "docs"]

[tool.flake8]
extend-ignore = "C901"
exclude = ["examples", "docs"]

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | examples
  | docs
)/
'''
